--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>Memory</title>
     <link rel="stylesheet" href="style.css"></link>
     <script src="app.js" charset="UTF-8"></script>
+    
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 </head>
 <body>
 
-    <h3>Score:<span id="result"></span></h3>
+    <h3>Collected pairs:<span id="result"></span></h3>
 
     <div class="grid">
         
